[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/press-start-64.tres" type="DynamicFont" id=1]
[ext_resource path="res://menus/main-button.tscn" type="PackedScene" id=2]
[ext_resource path="res://controls/sky-box/SkyBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://controls/themes/Palette.tscn" type="PackedScene" id=4]
[ext_resource path="res://menus/options-menu.gd" type="Script" id=5]
[ext_resource path="res://controls/fades/fader.tscn" type="PackedScene" id=6]
[ext_resource path="res://images/splash-400.png" type="Texture" id=7]
[ext_resource path="res://fonts/pres-start-32.tres" type="DynamicFont" id=8]

[node name="OptionsMenu" type="Control"]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkyBox" parent="." instance=ExtResource( 3 )]
color = Color( 0.0470588, 0.0470588, 0.0470588, 1 )

[node name="VBoxOuter" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 776.0
custom_constants/separation = 96
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxOuter"]
margin_right = 1024.0
margin_bottom = 160.0
custom_constants/margin_top = 96

[node name="Title" type="Label" parent="VBoxOuter/MarginContainer"]
margin_top = 96.0
margin_right = 1024.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0.172549, 0.184314, 0.4, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
text = "Options"
align = 1
valign = 1
uppercase = true

[node name="ContentArea" type="HBoxContainer" parent="VBoxOuter"]
margin_top = 256.0
margin_right = 1024.0
margin_bottom = 656.0
size_flags_vertical = 0
custom_constants/separation = 0

[node name="ButtonContainer" type="MarginContainer" parent="VBoxOuter/ContentArea"]
margin_right = 687.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 64
custom_constants/margin_top = 16
custom_constants/margin_left = 64
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxOuter/ContentArea/ButtonContainer"]
margin_left = 64.0
margin_top = 16.0
margin_right = 623.0
margin_bottom = 384.0
custom_constants/separation = 64
alignment = 1

[node name="ShowDebug" type="CheckBox" parent="VBoxOuter/ContentArea/ButtonContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 559.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 8 )
text = " Show debug info"

[node name="GodMode" type="CheckBox" parent="VBoxOuter/ContentArea/ButtonContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 559.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 8 )
text = " God mode"

[node name="Back" parent="VBoxOuter/ContentArea/ButtonContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 248.0
margin_right = 559.0
margin_bottom = 328.0
text = "BACK"

[node name="MarginContainer" type="MarginContainer" parent="VBoxOuter/ContentArea"]
margin_left = 687.0
margin_right = 1024.0
margin_bottom = 400.0
custom_constants/margin_right = 64

[node name="Cover" type="TextureRect" parent="VBoxOuter/ContentArea/MarginContainer"]
margin_right = 273.0
margin_bottom = 400.0
texture = ExtResource( 7 )

[node name="Palette" parent="." instance=ExtResource( 4 )]
position = Vector2( 80, 920 )

[node name="FadeToBlack" parent="." instance=ExtResource( 6 )]
visible = false
[connection signal="toggled" from="VBoxOuter/ContentArea/ButtonContainer/VBoxContainer/ShowDebug" to="." method="_on_ShowDebug_toggled"]
[connection signal="toggled" from="VBoxOuter/ContentArea/ButtonContainer/VBoxContainer/GodMode" to="." method="_on_GodMode_toggled"]
[connection signal="pressed" from="VBoxOuter/ContentArea/ButtonContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="fade_out_complete" from="FadeToBlack" to="." method="_on_FadeToBlack_fade_out_complete"]

[editable path="VBoxOuter/ContentArea/ButtonContainer/VBoxContainer/Back"]
